# cleo

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Start-Service ssh-agent  Start-Service ssh-agent.pub  Taskfile.yml  conftest.py  example.ipynb  example.py  netstore.pkl  opto_example.ipynb  opto_validation.ipynb  pyproject.toml  settings.ini  setup.cfg  setup.py  simple_PI_example.ipynb
.github/workflows/: test.yml
cleo/: __init__.py  base.py  coords.py  ioproc.py  netstore.pkl  opto.py  recorders.py  registry.py  stimulators.py  test_store.py  utilities.py  viz.py
cleo/electrodes/: __init__.py  lfp.py  spiking.py
cleo/ephys/: __init__.py  lfp.py  probes.py  spiking.py
cleo/imaging/: __init__.py  gecis.csv  indicators.py  naomi.py  noise.py  s2f.py  s2ff.py  scope.py  sensors.py
cleo/ioproc/: __init__.py  base.py  controllers.py  delays.py  observers.py
cleo/light/: __init__.py  light.py  light_dependence.py  two_photon.py
cleo/opto/: __init__.py  holo_stim.py  irradiance_data.py  light.py  opsin_library.py  opsins.py  registry.py
cleo/processing/: __init__.py  base.py  controllers.py  delays.py  observers.py
cleosim/: __init__.py  _version.py  base.py  coordinates.py  opto.py  recorders.py  stimulators.py  utilities.py  visualization.py
cleosim/electrodes/: __init__.py  lfp.py  probes.py  spiking.py
cleosim/ephys/: __init__.py  electrodes.py  lfp.py  spiking.py
cleosim/opto/: __init__.py  light.py  opsins.py
cleosim/processing/: __init__.py  base.py  controllers.py  delays.py  observers.py
cleosim/recorders/: electrodes.py  ephys.py  lfp.py
cleosim/stimulators/: opto.py
clocsim/: __init__.py  _version.py  base.py  coordinates.py  recorders.py  stimulators.py  utilities.py
clocsim/control_loop/: __init__.py  controllers.py  observers.py
clocsim/loop_components/: __init__.py  controllers.py
clocsim/processing/: __init__.py  delays.py  observers.py
clocsim/recorders/: __init__.py
clocsim/stimulators/: __init__.py  opto.py
docs/: _tutorials.rst  basics.rst  conf.py  index.rst  overview.md  overview.rst  reference.rst  requirements.txt  showcase.md  tutorial.ipynb  tutorials.rst
docs/reference/: cleo.rst  coords.rst  ephys.rst  imaging.rst  index.rst  ioproc.rst  light.rst  opto.rst  recorders.rst  registry.rst  stimulators.rst  utilities.rst  viz.rst
docs/tutorials/: PI_ctrl.ipynb  adaptive_ctrl_ldsctrlest.ipynb  advanced_lfp.ipynb  all_optical.ipynb  all_optical_advanced.ipynb  electrodes.ipynb  imaging.ipynb  index.rst  lqr_ctrl_ldsctrlest.ipynb  multi_opto.ipynb  neo.ipynb  on_off_ctrl.ipynb  optimal_ctrl.ipynb  optogenetics.ipynb  simple_PI_ctrl.ipynb  simple_trigger_ctrl.ipynb  tutorial.ipynb  video_visualization.ipynb
examples/: adaptive_ctrl_ldsctrlest.ipynb  electrodes.ipynb  ephys_example.ipynb  example.ipynb  opto_example.ipynb  optogenetics.ipynb  simple_PI_ctrl.ipynb  simple_PI_example.ipynb  simple_trigger_ctrl.ipynb
notebooks/: 1p_2p_ratio.ipynb  1p_2p_ratio_OLD.ipynb  README.md  all_optical_fig.ipynb  calculating_1p_2p_ratio.ipynb  double_exp_conv_as_ode.ipynb  ephys_fig.py  gaussian_imaging_noise_approx.ipynb  imaging_comparison.ipynb  interpolate.ipynb  interpolate.py  lfp_comparison.ipynb  light_viz.ipynb  multi_wavelength_model.ipynb  newman15_validation.ipynb  newman15_validation_alt.ipynb  opto_pr_fr_irr_exp_figs.ipynb  opto_pr_fr_irr_exp_figs.py  opto_pr_fr_pw_fig.ipynb  opto_thresh_figs.ipynb  opto_val.py  opto_validation.ipynb  rz_simulation.py  spike_detection.py  telenczuk20_demo.py  tklfp_verification.py
notebooks/data/: brunel_exc.txt  brunel_inh.txt  foutz12_3_wpd.csv  foutz12_4a_wpd.csv  pr_fr.csv  pr_fr_irr_exp.csv  thresholds.csv
notebooks/imaging_comparison/: imaging_comparison.py
supplement/: template_trace.ipynb
tests/: conftest.py  test_base.py  test_cleosim_stack.py  test_clocsim.py  test_coordinates.py  test_coords.py  test_docs.py  test_ioproc.py  test_opto.py  test_recorders.py  test_registry.py  test_stimulators.py  test_test.py  test_utilities.py  test_visualization.py  test_viz.py
tests/control_loop/: test_control_loop.py
tests/electrodes/: test_lfp.py  test_probes.py  test_spiking.py
tests/ephys/: test_electrodes.py  test_lfp.py  test_probes.py  test_spiking.py
tests/imaging/: test_more.py  test_naomi.py  test_naomi_geci.py  test_s2f.py  test_s2f_geci.py  test_scope.py  test_sensors.py  testing_sensors.py
tests/ioproc/: test_delays.py  test_processing.py
tests/light/: test_light.py  test_two_photon.py
tests/opto/: test_holo_stim.py  test_light.py  test_opsins.py  test_opto.py  test_registry.py
tests/processing/: test_delays.py  test_processing.py
tests/recorders/: test_electrodes.py  test_recorders.py
tests/stimulators/: test_opto.py  test_stimulators.py
validation/: opto_pr_fr_irr_exp_figs.ipynb  opto_pr_fr_pw_fig.ipynb  opto_thresh_figs.ipynb  opto_val.py  opto_validation.ipynb
validation/data/: foutz12_3.tar  foutz12_3_wpd.csv  foutz12_4b_wpd.csv  thresholds.csv
(+3 files in other folders)
