[tool.poetry]
name = "cleosim"
version = "0.14.3"
description = "Cleo: the Closed-Loop, Electrophysiology, and Optogenetics experiment simulation testbed"
authors = [
    "Kyle Johnsen <kyle@kjohnsen.org>",
    "Nathan Cruzado <ncruzado3@gatech.edu>",
]
license = "MIT"
homepage = "https://cleosim.readthedocs.io"
repository = "https://github.com/siplab-gt/cleo"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
packages = [{ include = "cleo" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
brian2 = "^2.4, !=2.5.0.2"
matplotlib = "^3.4"
numpy = "^1.16"
scipy = "^1.7.2"
tklfp = "^0.2"
bidict = "*"
nptyping = "^1.4.4"
attrs = "^23.0"
neo = "^0.12.0"
wslfp = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
nbmake = "^1.2"
sphinx = "^7.0"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.0"
sphinx-favicon = "^0.2"
furo = "^2024.01.29"
nbdev = "^2.3.12"
elephant = "^0.13.0"
seaborn = "^0.13.0"
ruff = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    # "--doctest-modules",
    "--nbmake",
    # "--flake8",
    # will want to call this on CI where ldsctrlest is not installed
    # "--ignore=examples/adaptive_ctrl_ldsctrlest.ipynb"
    # "--ignore=docs/tutorials/video_visualization.ipynb"
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests", "docs/tutorials"]
