[project]
name = "cleosim"
version = "0.18.2"
description = "Cleo: the Closed-Loop, Electrophysiology, and Optophysiology experiment simulation testbed"
authors = [
    { name = "Kyle Johnsen", email = "kyle@kjohnsen.org" },
    { name = "Nathan Cruzado", email = "ncruzado3@gatech.edu" },
]
license = "MIT"
readme = "README.md"
dynamic = ["classifiers"]
urls = { documentation = "https://cleosim.readthedocs.io/", source = "https://github.com/siplab-gt/cleo/" }

requires-python = ">=3.10,<3.14"
dependencies = [
    "brian2>=2.4,!=2.5.0.2,<3.0.0",
    "matplotlib>=3.7,<4.0.0",
    "scipy>=1.7.2,<1.14.1; python_version<'3.13'",
    "scipy>=1.14.1; python_version>='3.13'",
    "numpy >= 2.1.0,<3.0.0; python_version>='3.13'",
    "tklfp>=0.2,<0.3",
    "attrs>=23.0,<24.0",
    "neo>=0.12.0,<0.13.0",
    "wslfp>=0.2.1,<0.3.0",
    "jaxtyping>=0.2.34,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "nbmake>=1.2,<2.0.0",
    "sphinx>=7.0,<8.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
    "myst-nb>=1.0,<2.0",
    "sphinx-favicon>=0.2,<0.3",
    "furo>=2024.1.29,<2025.0.0",
    "nbdev>=2.3.12,<3.0.0",
    # not including elephant (used in Neo export tutorial) because of dep issues
    "seaborn>=0.13.0,<0.14.0",
    "ruff>=0.1.15,<1.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "marimo>=0.11.20,<1.0.0",
    "cvxpy>=1.6.5,<2.0.0",
]

[tool.poetry]
packages = [{ include = "cleo" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--nbmake"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests", "docs/tutorials"]
